<resources>
    <string name="my_string">Just a simple string</string>
    <string name="pictures">Pictures</string>
    <string name="videos">Videos</string>
    <string name="live">Live</string>
    <string name="fleek_tok">F!eekTok</string>
    <string name="pending">Pending</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="next">Next</string>

  <string-array name="array_name">
    <item>Gallery</item>
    <item>Camera</item>
  </string-array>
</resources>
