<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:title="@string/pictures"
        android:enabled="true"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_settings"
        android:title="@string/videos"
        android:enabled="true"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_live"
        android:title="@string/live"
        android:enabled="true"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_fleektok"
        android:title="@string/fleek_tok"
        android:enabled="true"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_pending"
        android:title="@string/pending"
        android:enabled="true"
        app:showAsAction="ifRoom|withText"/>
</menu>

